--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
     "@vercel/analytics": "^1.1.1",
-    "saos": "^1.3.1"
+    "svelte-inview": "^4.0.1"
   }
 }
