--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
+    "@sveltejs/adapter-vercel": "^3.1.0",
     "@vercel/analytics": "^1.1.1",
     "svelte-inview": "^4.0.1"
   }
