--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
     "@sveltejs/adapter-vercel": "^3.1.0",
+    "@sveltejs/enhanced-img": "^0.2.0",
     "@vercel/analytics": "^1.1.1",
-    "svelte-inview": "^4.0.1"
+    "photoswipe": "^5.4.3",
+    "svelte-inview": "^4.0.1",
+    "svelte-photoswipe": "^0.0.2"
   }
 }
